2012-05-18  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/powerpc/powerpc32/dl-start.S (_dl_start_user): Use
	INTUSE on _dl_argv, and _rtld_local instead of _rtld_global.
	* sysdeps/powerpc/powerpc32/fpu/__longjmp-common.S [IS_IN_rtld]:
	Refer to _rtld_local_ro instead of _rtld_global_ro.
	* sysdeps/powerpc/powerpc32/fpu/setjmp-common.S [IS_IN_rtld]:
	Likewise.
	* sysdeps/powerpc/powerpc64/__longjmp-common.S [IS_IN_rtld]:
	Likewise.
	* sysdeps/powerpc/powerpc64/setjmp-common.S [IS_IN_rtld]:
	Likewise.
	* sysdeps/powerpc/powerpc64/dl-trampoline.S [SHARED]: Likewise.
	* sysdeps/powerpc/powerpc64/dl-machine.h: Use _rtld_local instead
	of _rtld_global, and rtld_progname instead of _dl_argv[0].

	* sysdeps/powerpc/powerpc32/dl-machine.c
	(__elf_machine_runtime_setup) [PROF]: Don't reference
	_dl_prof_resolve.

2012-05-18  Andreas Jaeger  <aj@suse.de>

	* sysdeps/x86_64/fpu/bits/mathinline.h (lrintf): Make inline
	function only available for GCCs before 3.4 since GCC 3.4
	introduced a builtin.
	(lrint): Likewise.
	(llrintf): Likewise.
	(llrint): Likewise.
	(fmaxf): Likewise.
	(fmax): Likewise.
	(fminf): Likewise.
	(fmin): Likewise.
	(rint): Likewise.
	(rintf): Likewise.
	(nearbyint): Likewise.
	(nearbyintf): Likewise.
	(ceil): Likewise.
	(ceilf): Likewise.
	(floor): Likewise.
	(floorf): Likewise.

2012-05-17  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/pselect.c (data): Use __syscall_ulong_t
	on both fields and cast pointer to __syscall_ulong_t.

	* bits/types.h (__fsword_t): New type.
	* bits/typesizes.h (__FSWORD_T_TYPE): New macro.
	sysdeps/mach/hurd/bits/typesizes.h (__FSWORD_T_TYPE): Likewise.
	* sysdeps/unix/bsd/bsd4.4/freebsd/bits/typesizes.h
	(__FSWORD_T_TYPE): Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/typesizes.h
	(__FSWORD_T_TYPE): Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/typesizes.h
	(__FSWORD_T_TYPE): Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/typesizes.h
	(__FSWORD_T_TYPE): Likewise.